// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsaBanner applies Spanish translation 1`] = `
<DocumentFragment>
  <div
    i18n="[object Object]"
  >
    <section
      aria-label="bannerLabel"
      class="ds-c-usa-banner"
    >
      <header
        class="ds-c-usa-banner__header"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="icon-8__title"
          class="ds-c-icon ds-c-icon--usa-flag ds-c-usa-banner__header-flag"
          focusable="false"
          id="icon-8"
          role="img"
          viewBox="0 0 16 11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-8__title"
          >
            U.S. Bandera
          </title>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h16v11H0z"
              fill="#FFF"
            />
            <path
              d="M8 0h8v1H8z"
              fill="#DB3E1F"
            />
            <path
              d="M0 0h8v7H0z"
              fill="#1E33B1"
            />
            <path
              d="M8 2h8v1H8zM8 4h8v1H8zM8 6h8v1H8zM0 8h16v1H0zM0 10h16v1H0z"
              fill="#DB3E1F"
            />
            <path
              d="M1 1h1v1H1zM2 3h1v1H2zM1 5h1v1H1zM3 1h1v1H3zM4 3h1v1H4zM3 5h1v1H3zM5 1h1v1H5zM6 3h1v1H6zM5 5h1v1H5z"
              fill="#FFF"
            />
          </g>
        </svg>
        <p
          class="ds-c-usa-banner__header-text"
        >
          <span>
            bannerText
          </span>
          <button
            aria-controls="gov-banner_7"
            aria-expanded="false"
            class="ds-c-usa-banner__button"
          >
            <span
              class="ds-c-usa-banner__button-text"
            >
              bannerActionText
            </span>
            <svg
              aria-hidden="true"
              aria-labelledby="icon-9__title"
              class="ds-c-icon ds-c-icon--arrow ds-c-icon--arrow-down ds-c-usa-banner__action-icon"
              focusable="false"
              id="icon-9"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-9__title"
              >
                down arrow
              </title>
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </header>
      <div
        class="ds-c-usa-banner__content"
        hidden=""
        id="gov-banner_7"
      >
        <div
          class="ds-c-usa-banner__guidance-container"
        >
          <div
            class="ds-c-usa-banner__guidance"
          >
            <svg
              aria-hidden="true"
              aria-labelledby="icon-10__title"
              class="ds-c-icon ds-c-icon--building-circle ds-c-usa-banner__icon ds-c-icon-color--primary"
              focusable="false"
              id="icon-10"
              role="img"
              viewBox="0 0 54 54"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-10__title"
              >
                Building in circle
              </title>
              <g>
                <path
                  class="ds-c-icon--building-circle__building"
                  d="M36.5,20.91v1.36H35.15a0.71,0.71,0,0,1-.73.68H18.23a0.71,0.71,0,0,1-.73-0.68H16.14V20.91l10.18-4.07Zm0,13.57v1.36H16.14V34.48a0.71,0.71,0,0,1,.73-0.68h18.9A0.71,0.71,0,0,1,36.5,34.48ZM21.57,23.62v8.14h1.36V23.62h2.71v8.14H27V23.62h2.71v8.14h1.36V23.62h2.71v8.14h0.63a0.71,0.71,0,0,1,.73.68v0.68H17.5V32.45a0.71,0.71,0,0,1,.73-0.68h0.63V23.62h2.71Z"
                  fill="currentColor"
                />
                <circle
                  class="ds-c-icon--building-circle__circle"
                  cx="50%"
                  cy="50%"
                  fill="none"
                  r="47%"
                  stroke="currentColor"
                  stroke-width="1"
                />
              </g>
            </svg>
            <p
              class="ds-c-usa-banner__media-body"
            >
              <strong>
                domainHeaderText
              </strong>
              <br />
              domainAText
              <strong>
                 govText 
              </strong>
              domainText
            </p>
          </div>
          <div
            class="ds-c-usa-banner__guidance"
          >
            <svg
              aria-hidden="true"
              aria-labelledby="icon-11__title"
              class="ds-c-icon ds-c-icon--lock-circle ds-c-usa-banner__icon"
              focusable="false"
              id="icon-11"
              role="img"
              viewBox="0 0 54 54"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-11__title"
              >
                Lock in circle
              </title>
              <path
                d="M34.72,34.84a1.29,1.29,0,0,1-1.29,1.29H20.57a1.29,1.29,0,0,1-1.29-1.29V27.12a1.29,1.29,0,0,1,1.29-1.29H21V23.26a6,6,0,0,1,12,0v2.57h0.43a1.29,1.29,0,0,1,1.29,1.29v7.72Zm-4.29-9V23.26a3.43,3.43,0,0,0-6.86,0v2.57h6.86Z"
                fill="currentColor"
              />
              <circle
                cx="50%"
                cy="50%"
                fill="none"
                r="47%"
                stroke="currentColor"
                stroke-width="1"
              />
            </svg>
            <p
              class="ds-c-usa-banner__media-body"
            >
              <strong>
                httpsHeaderText
              </strong>
              <br />
              httpsAText
              <strong>
                 httpsLockText 
              </strong>
               ( 
              <svg
                aria-hidden="true"
                aria-labelledby="icon-12__title"
                class="ds-c-icon ds-c-icon--lock ds-c-usa-banner__lock-image"
                focusable="false"
                id="icon-12"
                role="img"
                viewBox="0 0 52 64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="icon-12__title"
                >
                  candado
                </title>
                <path
                  d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                  fill-rule="evenodd"
                />
              </svg>
               ) httpsOrText
              <strong>
                 httpsText 
              </strong>
              httpsDetailText
            </p>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`UsaBanner applies additional class names to expanded banner 1`] = `
<DocumentFragment>
  <div
    i18n="[object Object]"
  >
    <section
      aria-label="bannerLabel"
      class="ds-c-usa-banner"
    >
      <header
        class="ds-c-usa-banner__header ds-c-usa-banner__header--expanded"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="icon-14__title"
          class="ds-c-icon ds-c-icon--usa-flag ds-c-usa-banner__header-flag"
          focusable="false"
          id="icon-14"
          role="img"
          viewBox="0 0 16 11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-14__title"
          >
            U.S. Flag
          </title>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h16v11H0z"
              fill="#FFF"
            />
            <path
              d="M8 0h8v1H8z"
              fill="#DB3E1F"
            />
            <path
              d="M0 0h8v7H0z"
              fill="#1E33B1"
            />
            <path
              d="M8 2h8v1H8zM8 4h8v1H8zM8 6h8v1H8zM0 8h16v1H0zM0 10h16v1H0z"
              fill="#DB3E1F"
            />
            <path
              d="M1 1h1v1H1zM2 3h1v1H2zM1 5h1v1H1zM3 1h1v1H3zM4 3h1v1H4zM3 5h1v1H3zM5 1h1v1H5zM6 3h1v1H6zM5 5h1v1H5z"
              fill="#FFF"
            />
          </g>
        </svg>
        <p
          class="ds-c-usa-banner__header-text"
        >
          <span>
            bannerText
          </span>
          <button
            aria-controls="gov-banner_19"
            aria-expanded="true"
            class="ds-c-usa-banner__button"
          >
            <span
              class="ds-c-usa-banner__button-text"
            >
              bannerActionText
            </span>
            <svg
              aria-hidden="true"
              aria-labelledby="icon-15__title"
              class="ds-c-icon ds-c-icon--arrow ds-c-icon--arrow-up ds-c-usa-banner__action-icon"
              focusable="false"
              id="icon-15"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-15__title"
              >
                up arrow
              </title>
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </header>
      <div
        class="ds-c-usa-banner__content"
        id="gov-banner_19"
      >
        <div
          class="ds-c-usa-banner__guidance-container"
        >
          <div
            class="ds-c-usa-banner__guidance"
          >
            <svg
              aria-hidden="true"
              aria-labelledby="icon-16__title"
              class="ds-c-icon ds-c-icon--building-circle ds-c-usa-banner__icon ds-c-icon-color--primary"
              focusable="false"
              id="icon-16"
              role="img"
              viewBox="0 0 54 54"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-16__title"
              >
                Building in circle
              </title>
              <g>
                <path
                  class="ds-c-icon--building-circle__building"
                  d="M36.5,20.91v1.36H35.15a0.71,0.71,0,0,1-.73.68H18.23a0.71,0.71,0,0,1-.73-0.68H16.14V20.91l10.18-4.07Zm0,13.57v1.36H16.14V34.48a0.71,0.71,0,0,1,.73-0.68h18.9A0.71,0.71,0,0,1,36.5,34.48ZM21.57,23.62v8.14h1.36V23.62h2.71v8.14H27V23.62h2.71v8.14h1.36V23.62h2.71v8.14h0.63a0.71,0.71,0,0,1,.73.68v0.68H17.5V32.45a0.71,0.71,0,0,1,.73-0.68h0.63V23.62h2.71Z"
                  fill="currentColor"
                />
                <circle
                  class="ds-c-icon--building-circle__circle"
                  cx="50%"
                  cy="50%"
                  fill="none"
                  r="47%"
                  stroke="currentColor"
                  stroke-width="1"
                />
              </g>
            </svg>
            <p
              class="ds-c-usa-banner__media-body"
            >
              <strong>
                domainHeaderText
              </strong>
              <br />
              domainAText
              <strong>
                 govText 
              </strong>
              domainText
            </p>
          </div>
          <div
            class="ds-c-usa-banner__guidance"
          >
            <svg
              aria-hidden="true"
              aria-labelledby="icon-17__title"
              class="ds-c-icon ds-c-icon--lock-circle ds-c-usa-banner__icon"
              focusable="false"
              id="icon-17"
              role="img"
              viewBox="0 0 54 54"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="icon-17__title"
              >
                Lock in circle
              </title>
              <path
                d="M34.72,34.84a1.29,1.29,0,0,1-1.29,1.29H20.57a1.29,1.29,0,0,1-1.29-1.29V27.12a1.29,1.29,0,0,1,1.29-1.29H21V23.26a6,6,0,0,1,12,0v2.57h0.43a1.29,1.29,0,0,1,1.29,1.29v7.72Zm-4.29-9V23.26a3.43,3.43,0,0,0-6.86,0v2.57h6.86Z"
                fill="currentColor"
              />
              <circle
                cx="50%"
                cy="50%"
                fill="none"
                r="47%"
                stroke="currentColor"
                stroke-width="1"
              />
            </svg>
            <p
              class="ds-c-usa-banner__media-body"
            >
              <strong>
                httpsHeaderText
              </strong>
              <br />
              httpsAText
              <strong>
                 httpsLockText 
              </strong>
               ( 
              <svg
                aria-hidden="true"
                aria-labelledby="icon-18__title"
                class="ds-c-icon ds-c-icon--lock ds-c-usa-banner__lock-image"
                focusable="false"
                id="icon-18"
                role="img"
                viewBox="0 0 52 64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="icon-18__title"
                >
                  lock
                </title>
                <path
                  d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                  fill-rule="evenodd"
                />
              </svg>
               ) httpsOrText
              <strong>
                 httpsText 
              </strong>
              httpsDetailText
            </p>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`UsaBanner renders correctly 1`] = `
"[36m<div>[39m
  [36m<div[39m
    [33mi18n[39m=[32m\\"[object Object]\\"[39m
  [36m>[39m
    [36m<section[39m
      [33maria-label[39m=[32m\\"bannerLabel\\"[39m
      [33mclass[39m=[32m\\"ds-c-usa-banner\\"[39m
    [36m>[39m
      [36m<header[39m
        [33mclass[39m=[32m\\"ds-c-usa-banner__header\\"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m\\"true\\"[39m
          [33maria-labelledby[39m=[32m\\"icon-2__title\\"[39m
          [33mclass[39m=[32m\\"ds-c-icon ds-c-icon--usa-flag ds-c-usa-banner__header-flag\\"[39m
          [33mfocusable[39m=[32m\\"false\\"[39m
          [33mid[39m=[32m\\"icon-2\\"[39m
          [33mrole[39m=[32m\\"img\\"[39m
          [33mviewBox[39m=[32m\\"0 0 16 11\\"[39m
          [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
        [36m>[39m
          [36m<title[39m
            [33mid[39m=[32m\\"icon-2__title\\"[39m
          [36m>[39m
            [0mU.S. Flag[0m
          [36m</title>[39m
          [36m<g[39m
            [33mfill[39m=[32m\\"none\\"[39m
            [33mfill-rule[39m=[32m\\"evenodd\\"[39m
          [36m/>[39m
        [36m</svg>[39m
        [36m<p[39m
          [33mclass[39m=[32m\\"ds-c-usa-banner__header-text\\"[39m
        [36m>[39m
          [36m<span>[39m
            [0mbannerText[0m
          [36m</span>[39m
          [36m<button[39m
            [33maria-controls[39m=[32m\\"gov-banner_1\\"[39m
            [33maria-expanded[39m=[32m\\"false\\"[39m
            [33mclass[39m=[32m\\"ds-c-usa-banner__button\\"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m\\"ds-c-usa-banner__button-text\\"[39m
            [36m>[39m
              [0mbannerActionText[0m
            [36m</span>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m\\"true\\"[39m
              [33maria-labelledby[39m=[32m\\"icon-3__title\\"[39m
              [33mclass[39m=[32m\\"ds-c-icon ds-c-icon--arrow ds-c-icon--arrow-down ds-c-usa-banner__action-icon\\"[39m
              [33mfocusable[39m=[32m\\"false\\"[39m
              [33mid[39m=[32m\\"icon-3\\"[39m
              [33mrole[39m=[32m\\"img\\"[39m
              [33mviewBox[39m=[32m\\"0 0 320 512\\"[39m
              [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
            [36m>[39m
              [36m<title[39m
                [33mid[39m=[32m\\"icon-3__title\\"[39m
              [36m>[39m
                [0mdown arrow[0m
              [36m</title>[39m
            [36m</svg>[39m
          [36m</button>[39m
        [36m</p>[39m
      [36m</header>[39m
      [36m<div[39m
        [33mclass[39m=[32m\\"ds-c-usa-banner__content\\"[39m
        [33mhidden[39m=[32m\\"\\"[39m
        [33mid[39m=[32m\\"gov-banner_1\\"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m\\"ds-c-usa-banner__guidance-container\\"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m\\"ds-c-usa-banner__guidance\\"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m\\"true\\"[39m
              [33maria-labelledby[39m=[32m\\"icon-4__title\\"[39m
              [33mclass[39m=[32m\\"ds-c-icon ds-c-icon--building-circle ds-c-usa-banner__icon ds-c-icon-color--primary\\"[39m
              [33mfocusable[39m=[32m\\"false\\"[39m
              [33mid[39m=[32m\\"icon-4\\"[39m
              [33mrole[39m=[32m\\"img\\"[39m
              [33mviewBox[39m=[32m\\"0 0 54 54\\"[39m
              [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
            [36m>[39m
              [36m<title[39m
                [33mid[39m=[32m\\"icon-4__title\\"[39m
              [36m>[39m
                [0mBuilding in circle[0m
              [36m</title>[39m
              [36m<g />[39m
            [36m</svg>[39m
            [36m<p[39m
              [33mclass[39m=[32m\\"ds-c-usa-banner__media-body\\"[39m
            [36m>[39m
              [36m<strong>[39m
                [0mdomainHeaderText[0m
              [36m</strong>[39m
              [36m<br />[39m
              [0mdomainAText[0m
              [36m<strong>[39m
                [0m [0m
                [0mgovText[0m
                [0m [0m
              [36m</strong>[39m
              [0mdomainText[0m
            [36m</p>[39m
          [36m</div>[39m
          [36m<div[39m
            [33mclass[39m=[32m\\"ds-c-usa-banner__guidance\\"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m\\"true\\"[39m
              [33maria-labelledby[39m=[32m\\"icon-5__title\\"[39m
              [33mclass[39m=[32m\\"ds-c-icon ds-c-icon--lock-circle ds-c-usa-banner__icon\\"[39m
              [33mfocusable[39m=[32m\\"false\\"[39m
              [33mid[39m=[32m\\"icon-5\\"[39m
              [33mrole[39m=[32m\\"img\\"[39m
              [33mviewBox[39m=[32m\\"0 0 54 54\\"[39m
              [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
            [36m>[39m
              [36m<title[39m
                [33mid[39m=[32m\\"icon-5__title\\"[39m
              [36m>[39m
                [0mLock in circle[0m
              [36m</title>[39m
            [36m</svg>[39m
            [36m<p[39m
              [33mclass[39m=[32m\\"ds-c-usa-banner__media-body\\"[39m
            [36m>[39m
              [36m<strong>[39m
                [0mhttpsHeaderText[0m
              [36m</strong>[39m
              [36m<br />[39m
              [0mhttpsAText[0m
              [36m<strong>[39m
                [0m [0m
                [0mhttpsLockText[0m
                [0m [0m
              [36m</strong>[39m
              [0m ([0m
              [0m [0m
              [36m<svg[39m
                [33maria-hidden[39m=[32m\\"true\\"[39m
                [33maria-labelledby[39m=[32m\\"icon-6__title\\"[39m
                [33mclass[39m=[32m\\"ds-c-icon ds-c-icon--lock ds-c-usa-banner__lock-image\\"[39m
                [33mfocusable[39m=[32m\\"false\\"[39m
                [33mid[39m=[32m\\"icon-6\\"[39m
                [33mrole[39m=[32m\\"img\\"[39m
                [33mviewBox[39m=[32m\\"0 0 52 64\\"[39m
                [33mxmlns[39m=[32m\\"http://www.w3.org/2000/svg\\"[39m
              [36m>[39m
                [36m<title[39m
                  [33mid[39m=[32m\\"icon-6__title\\"[39m
                [36m>[39m
                  [0mlock[0m
                [36m</title>[39m
              [36m</svg>[39m
              [0m [0m
              [0m) [0m
              [0mhttpsOrText[0m
              [36m<strong>[39m
                [0m [0m
                [0mhttpsText[0m
                [0m [0m
              [36m</strong>[39m
              [0mhttpsDetailText[0m
            [36m</p>[39m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</section>[39m
  [36m</div>[39m
[36m</div>[39m"
`;
